# hyprland-relative-workspace

./: Cargo.toml  PKGBUILD  README.md  publish.sh
src/: main.rs
