[package]
name = "hyprland-relative-workspace"
description = "A tool to switch Hyprland workspaces relatively to monitor"
version = "1.0.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/CheesyPhoenix/hyprland-relative-workspace"
repository = "https://github.com/CheesyPhoenix/hyprland-relative-workspace"
readme = "README.md"
authors = ["CheesyPhoenix"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hyprland-relative-workspace"

[dependencies]
hyprland = "0.3.1"
